--- a/github.html
+++ b/github.html
@@ -42,7 +42,7 @@
           </div>
           <div class="row no-gutters">
             <div class="col">
-              <ul id="nav" class="list-inline menucontainer row">
+              <ul id="nav" class="list-inline menucontainer">
                 <li
                   class="col-6 col-sm-2 ui-menu-color-home list-inline-item menuitem"
                 >
