--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,21 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Rosie</title>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init({
+          publicKey: "xOCIOcZlmd5uQv54S",
+        });
+        emailjs.send("service_w7v896q", "template_czsiu17", {
+          to_name: "Ilyas",
+          message: "The project that i want is...",
+        });
+      })();
+    </script>
   </head>
   <body>
     <header>
@@ -78,7 +93,7 @@
           <h5 class="uppercase text-center">Let's work together!</h5>
 
           <div class="center-form">
-            <form>
+            <form onsubmit="return sendMail(this)">
               <input
                 type="text"
                 name="name"
@@ -177,5 +192,6 @@
         </div>
       </div>
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
   </body>
 </html>
